✨(refactor)(startup): Improve ingredient filter and search tree rebuilding
- Clear creative tab item stacks on error to prevent nulls.
- Clear subBlocks on error and at the end of the loop to prevent duplicates.
- Add option to show hidden ingredients in creative mode.
- Optimize bufferIngredientRenders to disable when Optifine fast render is active.
- Cache recipe catalysts in RecipeCategoryTab for performance.
- Add async capability to search prefixes.
- Improve search tree rebuilding logic to ensure it's blocked until complete.
- Add invalidateBuffer calls to refresh UI elements after changes.
- Handle ingredient additions and removals more robustly.
- Improve locale caching and invalidation.
- Add timeout to async search service termination.